# sourcepack

./: .gitattributes  .gitignore  BUILD_WEEK.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: false_negative.md  false_positive.md  install_demo_problem.md  unsupported_ecosystem_request.md
.github/workflows/: hardening-tests.yml  pages-showcase.yml  release-smoke.yml  sourcepack.yml
.sourcepack/baseline/: active.json
corpus/: repos.example.json
docs/: README.md  adversarial-hardening-plan.md  ai-agent-workflow.md  architecture.md  baseline-lifecycle.md  ci.md  demo-evidence-checklist.md  github-action-quickstart.md  hosted-control-plane.md  limitations.md  problem-fit.md  public-alpha-readiness.md  real-corpus-validation.md  reason-codes.md  release-checklist.md  schema-contracts.md  sourcepack-command-center.md  submission-assets.md  submission-check.md  submission-claims.md  submission-evidence.md  submission-final.md  submission-index.md  submission-notes.md  submission-proof.md  submission-readiness.md  submission-record.md  submission-summary.md  systemic-upgrade-status.md  threat-model.md  vscode-extension-plan.md  workbench-review-flow.md
docs/assets/: README.md
docs/examples/: sourcepack-action.yml
docs/releases/: v1.10.0a0-publish-checklist.md  v1.10.0a0.md
docs/showcase/: index.html  showcase-data.json  showcase.css  showcase.js
examples/: fake_ai_answer.md
examples/demo_packet/: context.md  context.xml  file_tree.txt  ignored_files.txt  manifest.json  receipt.json  token_report.json
examples/judgment/: judgment_report.json  judgment_report.md
schemas/: judgment_report.schema.json  patch_judgment_report.schema.json  reality_map.schema.json  receipt.schema.json
scripts/: release_smoke.py  sourcepack_action.py
src/sourcepack/: __init__.py  analysis.py  baseline.py  cli.py  cloud.py  git.py  (+24 more)
tests/: __init__.py  simulation_helpers.py  test_baseline_integrity.py  test_baseline_lifecycle.py  test_baseline_lifecycle_cli.py  test_behavior_matrix.py  test_ci_docs_truth.py  test_cli_registry.py  test_clipboard.py  test_cloud_optional.py  test_command_center_static.py  test_command_resolution_provenance.py  test_command_resolver.py  test_confidence_report.py  test_core_rendering.py  test_decision_ledger.py  test_demo_smoke.py  test_dependency_inventory_behavior.py  test_dependency_resolver.py  test_diff_exit_policy.py  test_diff_parser.py  test_engine_inversion.py  test_evidence_bundle.py  test_evidence_model.py  test_execution_ledger.py  test_final_boss_integration.py  test_finding_identity.py  test_fleet.py  test_fleet_cli.py  test_gauntlet.py  test_git.py  test_github_action.py  test_golden_demo.py  test_judgment.py  test_judgment_hardening.py  test_judgment_provenance_handoff.py  test_local_policy.py  test_org_policy_resolution.py  test_overrides.py  test_phase1_consolidation.py  (+24 more)
tools/: behavior_matrix.py  generate_showcase_data.py  golden_demo.py  real_corpus_validation.py  release_smoke.py
(+90 files in other folders)
