[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sourcepack"
version = "1.10.0a0"
description = "Local-first guardrail for unsupported AI repository assumptions before commit."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["ai", "git", "developer-tools", "guardrails", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]


[project.scripts]
sourcepack = "sourcepack.cli:main"
