[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sourcepack"
version = "1.10.0a2"
description = "Local-first guardrail for unsupported AI repository assumptions before commit."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ai", "git", "developer-tools", "guardrails", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]


[project.scripts]
sourcepack = "sourcepack.cli:main"
[tool.setuptools.package-data]
sourcepack = ["assets/*.md", "examples/*.md", "examples/*.diff", "examples/demo_repo/**/*", "examples/demo_repo/**/.env"]
