[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sourcepack"
version = "1.10.0a3"
description = "Local-first guardrail for unsupported AI repository assumptions before commit."
readme = "README.md"
authors = [{name = "Joshua Vetos"}]
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.18,<5", "argon2-cffi>=23.1,<26"]
license = "MIT"
keywords = ["ai", "git", "developer-tools", "guardrails", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/joshuavetos/sourcepack"
Repository = "https://github.com/joshuavetos/sourcepack"
Issues = "https://github.com/joshuavetos/sourcepack/issues"

[project.scripts]
sourcepack = "sourcepack.cli:main"
sourcepack-hosted = "sourcepack.hosted:main"

[tool.setuptools.package-data]
sourcepack = ["assets/*.md", "examples/*.md", "examples/*.diff", "examples/demo_repo/**/*", "examples/demo_repo/**/.env", "workbench_static/*"]

[tool.setuptools.exclude-package-data]
sourcepack = ["**/__pycache__/*", "**/*.pyc"]
